--- a/M1/views/index.njk
+++ b/M1/views/index.njk
@@ -3,8 +3,10 @@
     <title>myGoNode</title>
   </head>
   <body>
-    {% for name in names %}
-      Wellcome, {{ name }} <br>
-    {% endfor %}
+    <form action="/auth" method="POST">
+      <input type="text" name="username" />
+      <input type="password" name="password" />
+      <button type="submit">LogIn</button>
+    </form>
   </body>
 </html>
